# binance_ml_model

./: .gitignore  backtest.py  launch.py  parse_optuna_db.py  parser.py  primary_configs.json  pyproject.toml
models/primary/: summary.json
src/: backtest_utils.py  main.py  meta.py  quick_meta_eval.py  run_top_trials.py
src/experiment/: __init__.py
src/features/: engineer.py
src/model/: importance.py  metrics.py  purged_kfold.py  train.py
src/pre_process/: build_dollar_bars.py  collector.py  trippler_barrier.py
